Chore/opt tests (#78)
* test: add more tests for sandbox execution

* feat(test): add session scoped fixtures for testing

Co-developed-by: Aone Copilot <noreply@alibaba-inc.com>

* test: add tests for sandbox manager asynchronous operations

* ci: update pytest markers and test workflow

* ci: update python CI script and tests

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -56,10 +56,16 @@ jobs:
       run: |
         mkdir -p data/logs
         echo "🚀 Running fast tests..."
-        uv run pytest -m "not slow" --reruns 1
+        uv run pytest -m "not need_ray and not need_admin" --reruns 1 -n auto
 
-    - name: Run slow tests
+    - name: Run tests need ray
       if: success()
       run: |
-        echo "🐌 Running slow tests..."
-        uv run pytest -m "slow" --reruns 1
+        echo "⚡ Running ray tests..."
+        uv run pytest -m "need_ray" --reruns 1
+
+    - name: Run tests need admin
+      if: success()
+      run: |
+        echo "🔐 Running admin tests..."
+        uv run pytest -m "need_admin" --reruns 1
